Revert "Update to CocoaPods CDN (#848)"
This reverts commit 9c50b61c5cc3548f0610612e67f6e7736388467c.

--- a/plugin.xml
+++ b/plugin.xml
@@ -175,7 +175,7 @@
         <!-- Facebook SDK -->
         <podspec>
             <config>
-                <source url="https://cdn.cocoapods.org/"/>
+                <source url="https://github.com/CocoaPods/Specs.git"/>
             </config>
             <pods use-frameworks="true">
                 <pod name="FBSDKCoreKit" spec="$FACEBOOK_IOS_SDK_VERSION"/>
